src/themes/pp-ui-base-theme.css
/* ... */
.pp-ui-button.pp-ui-disabled:hover, .pp-ui-button.pp-ui-disabled:focus {
    background-color: transparent;
}

.pp-ui-slider.pp-ui-disabled .pp-ui-slider-range {
    background-color: var(--pp-fg-disabled-color);
}

.pp-ui-slider.pp-ui-disabled .pp-ui-slider-range-thumb {
    display: none;
}

.pp-ui-slider.pp-ui-disabled .pp-ui-slider-range-progress {
    display: none;
}

.pp-ui-basic-theme .pp-ui-horizontal-bar {
    padding: .5rem 0;
}

.pp-ui-basic-theme .pp-ui-horizontal-bar .pp-ui-button {
    padding: .25rem;
}

.pp-ui-basic-theme .pp-ui-volumebar {
    width: 200px;
    max-width: 200px;
}

.pp-ui-spacer {
    flex-grow: 1;
    flex-shrink: 1;
    width: 100%;
    height: 100%;
}

.pp-ui-transparent {
    background: transparent;
}

.pp-ui-hide {
    display: none;
}

.pp-ui-selected {
}

.pp-ui-absolute-center {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    height: fit-content;
}

.pp-ui-enabled {

}

.pp-ui-disabled {

}

@media (max-width: 800px) {

    .pp-ui {
        --pp-ui-button-size: 2rem;
        --pp-ui-lable-font-size: .875rem;
        --pp-ui-lable-subtitle-font-size: .75rem;
        --pp-ui-thumnail-height: 120px;
        --pp-ui-start-button-size: 3rem;
    }

    .pp-ui-basic-theme .pp-ui-volumebar {
        display: none;
    }
}

